[package]
name = "memory-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-track = { version = "0.3.0", features = ["backtrace", "libc"], default-features = false }
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2.151"
signal-hook = "0.3.17"

[target."cfg(target_os = \"macos\")".dependencies.darwin-libproc]
version = "0.2.0"
