[package]
name = "memory-monitor"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.11.5"
libc = "0.2.151"
log = "0.4.22"
mockall = "0.13.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[target."cfg(target_os = \"macos\")".dependencies.darwin-libproc]
version = "0.2.0"
